--- a/views/editUser.hbs
+++ b/views/editUser.hbs
@@ -1,3 +1,7 @@
+<div class="moveDown">
+    
+</div>
+
 <h3> Edit your Cheer up Account </h3>
 <div class="editAct">
     
@@ -37,5 +41,5 @@
 <h3> Click the delete button below to remove your Cheer Up account.</h3>
 
 <form action="/users/{{id}}?_method=delete" method="post">
-    <input class="button delete" type="submit" value="Delete">
+    <input class="buttondelete" type="submit" value="Delete">
 </form>
