--- a/public/css/cheerStyle.css
+++ b/public/css/cheerStyle.css
@@ -1,10 +1,13 @@
 @import url('https://fonts.googleapis.com/css?family=Happy+Monkey&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Mansalva&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Noto+Sans&display=swap');
-body{
+
+
+body {
     background-color: aqua;
 
 }
+
 
 .head {
     display: flex;
@@ -12,20 +15,21 @@ body{
     
 }
 
-h1{
+h1 {
     font-family: 'Happy Monkey', cursive, sans-serif;
     font-size:40px;
     text-align: center;
 
 }
 
-h2{
+h2 {
     font-size: 35px;
+    text-align: center;
 }
 
-h3{
+h3 {
     font-size: 25px;
-
+    text-align: center;
     
 }
 
@@ -44,20 +48,45 @@ h4 {
 
 }
 
-.top {
-    display: -webkit-flex;
-    display: flex;
-    -webkit-flex-flow: row wrap;
-    flex-flow: row wrap;
-    justify-content: space-between;
-    margin: 5% 0;
-    padding: 5px;
-    border: 5px solid salmon;
-    border-radius: 10px;
+@-moz-document url-prefix() {
+  
+    .moveDown{
+        margin:50px;
+        padding:10px;
+        height:150px;
+        
+    }
+    .top {
+        margin:10px 0;
+    }
+
+    .second {
+        margin:10px 0;
+    }
+
+    .buttondelete {
+     
+        text-align: center;
+        font-size: 10px;
+        text-align: center;
+        padding: 0;
+        margin-left: 50%;
+        margin-right: 50%;
+        margin-top: 3%;
+        margin-bottom: 8%;
+    }
 
 }
 
-.top a{
+.top {
+    padding: 10px;
+    border: 5px solid salmon;
+    border-radius: 10px;
+    margin:6% 0;
+
+}
+
+.top a {
     -webkit-flex: 1 auto;
     flex: 1 auto;
     text-decoration: none;
@@ -69,7 +98,7 @@ h4 {
 
 }
 
-.top a:hover{
+.top a:hover {
     -webkit-flex: 1 auto;
     flex: 1 auto;
     text-decoration: none;
@@ -82,64 +111,62 @@ h4 {
 
 }
 
-.second{
-
+.second {
     position: relative;
     top: 50%;
     left: 50%;
     -webkit-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
     background-color: green;
-    margin: 2% 0;
+    margin: 8% 0;
     font-size: 25px;
     text-align: center;
     align-self: center;
     border: 3px yellowgreen solid;
     border-radius: 10px;
     padding: 10px;
-    
 }
 
 .second:hover {
-
     font-size: 28px;
     background-color: yellowgreen;
     border: 5px black solid;
     border-radius: 13px;
     padding: 12px;
-    
-
 }
 
 
 .second a {
-
-    
     text-decoration: none;
     background-color: antiquewhite;
     color: crimson;
     border: 2px solid black;
     border-radius: 10px;
     padding: 5px;
-
 }
 
 
-
+h5 {
+    display: flex;
+    -webkit-flex-flow: row wrap;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    font-size: 25px;
+    text-align: center;
+}
 
 
 .cheersmain {
-    
     display: flex;
     -webkit-flex-flow: row wrap;
     flex-flow: row wrap;
     justify-content: space-evenly;
     align-content: space-around;
+    margin: 5%;
 }
 
 
 .cheerup{
-    
     font-size: 30px;
     background-color: rgb(247, 242, 109);
     width: 552px;
@@ -152,22 +179,18 @@ h4 {
 
 .showCheer {
     background-color: pink;
-    
 }
 
 .showCheer a {
-
     background-color: blue;
     color: whitesmoke;
     text-align: center;
     padding: 5px;
     margin-left: 45%;
-   
     flex-wrap: nowrap;
 }
 
 .newCheerForm, .editCheer {
-
     margin: 15px;
     padding: 20px;
     font-size: 25px;
@@ -175,13 +198,12 @@ h4 {
     color: whitesmoke;
 }
 
-.newCheerForm{
+.newCheerForm {
     background-color: rgb(50, 69, 241);
 }
 
 .editCheer {
     background-color: rgb(243, 159, 232);
-    
 }
 
 .colorbuttons {
@@ -191,7 +213,7 @@ h4 {
 .firstNC, 
 .secondNC, 
 .thirdNC,
-.fourthNc  {
+.fourthNc {
     margin: 5% 3%;
     padding: 25px;
     color: rgb(0, 0, 0);
@@ -217,7 +239,6 @@ h4 {
     color: black;
     padding: 10px;
     text-align: center;
-
 }
 
 .buttong, .buttonlblg {
@@ -228,12 +249,9 @@ h4 {
     color: black;
     padding: 10px;
     text-align: center;
-
 }
 
-
-.buttonNCS, .buttondelete {
-    
+.buttondelete {
     font-size: 40px;
     text-align: center;
     padding:25px;
@@ -241,13 +259,12 @@ h4 {
     margin-right: 50%;
     margin-top: 3%;
     margin-bottom: 8%;
-    
 }
 
 
 /* still a little wonky if at less than 300px wide - but dang thats small - get a better phone already */
 
-@media only screen and (max-width: 419px) {
+@media only screen and (max-width: 425px) {
 h1 {
     font-family: 'Happy Monkey', cursive, sans-serif;
     font-size:30px;
@@ -270,7 +287,7 @@ h1 {
     border: 3px solid salmon;
     border-radius: 5px;
     }
-.top a{
+.top a {
     -webkit-flex: 1 auto;
     flex: 1 auto;
     flex-shrink: 2;
@@ -281,7 +298,7 @@ h1 {
     justify-content: flex-start;
     text-align: center;
     }
-.top a:hover{
+.top a:hover {
     -webkit-flex: 1 auto;
     flex: 1 auto;
     text-decoration: none;
@@ -292,7 +309,7 @@ h1 {
     border-radius: 5px;
     text-align: center;
     }
-.second{
+.second {
     flex-wrap: nowrap;
     flex-shrink: 2;
     position: relative;
@@ -320,7 +337,7 @@ h1 {
     border-radius: 10px;
     padding: 1px;
     }
-.cheerup{
+.cheerup {
     color:black;
     font-size: 20px;
     background-color: rgb(247, 242, 109);
