--- a/views/newCheer.hbs
+++ b/views/newCheer.hbs
@@ -1,3 +1,7 @@
+<div class="moveDown">
+    
+</div>
+
 <h3>    Add a ' Cheer Up ' to our list </h3>
 <div class="newCheerForm">
 <form  name="formNC" action="/cheerUps" method="POST">
@@ -33,7 +37,7 @@
 
     
 
-    <input class="buttonNCS" type="submit" value="Add New Cheer">
+    <input class="buttondelete" type="submit" value="Add New Cheer">
 
 </form>
 </div>
