--- a/views/editUser.hbs
+++ b/views/editUser.hbs
@@ -9,19 +9,19 @@
 <section>
     <h3> 
 <label for="Name">Your Name</label>
-    <input type="text" name="name" value="{{name}}"  maxlength="40" size="42">
+    <input type="text" name="name" value="{{name}}"  maxlength="40" size="42" required>
     </h3>
 </section>
 <section>
     <h3> 
 <label for="username">Cheer Ups User Name</label>
-    <input type="text" name="username" value="{{username}}"       maxlength="40" size="42">
+    <input type="text" name="username" value="{{username}}"       maxlength="40" size="42" required>
     </h3>
 </section>
 <section>
     <h3> 
 <label for="email">email to make a cheer up account</label> 
-    <input type="text" name="email" value="{{email}}"  maxlength="40" size="42">
+    <input type="text" name="email" value="{{email}}"  maxlength="40" size="42" required>
     </h3>
 </section>
 <section>
