--- a/views/login.hbs
+++ b/views/login.hbs
@@ -10,7 +10,7 @@
     <section class="logtop"> 
         <h3>
     <label for="username">Cheer Ups User Name:</label>
-    <input type="text" name="username" value="{{username}}" maxlength="40" size="42">
+    <input type="text" name="username" value="{{username}}" maxlength="40" size="42" required>
     </h3>
     </section>
     <section class="logmid">
