--- a/views/newAccount.hbs
+++ b/views/newAccount.hbs
@@ -9,25 +9,25 @@
 <section>
     <h3> 
 <label for="Name">Your Name</label>
-    <input type="text" name="name" value="{{name}}"  maxlength="40" size="42">
+    <input type="text" name="name" value="{{name}}"  maxlength="40" size="42" required>
      </h3>
 </section>
 <section>
     <h3> 
 <label for="username">Cheer Ups User Name</label>
-    <input type="text" name="username" value="{{username}}"    maxlength="40" size="42">
+    <input type="text" name="username" value="{{username}}"    maxlength="40" size="42" required>
     </h3>
 </section>
 <section>
     <h3> 
 <label for="email">Email REQUIRED to make an account</label> 
-    <input type="text" name="email" value="{{email}}"       maxlength="40" size="42">
+    <input type="text" name="email" value="{{email}}"       maxlength="40" size="42" required>
     </h3>
 </section>
 <section>
     <h3> 
 <label for="password">Password for Cheer Ups</label> 
-    <input type="password" name="password" value="{{password}}" maxlength="25" size="26">
+    <input type="password" name="password" value="{{password}}" maxlength="25" size="26" required>
      </h3>
 </section>
 <section>
