label for must match input id

--- a/views/editUser.hbs
+++ b/views/editUser.hbs
@@ -15,19 +15,19 @@
 <section>
     <h3> 
 <label for="username">Cheer Ups User Name</label>
-    <input type="text" name="username" value="{{username}}"       maxlength="40" size="42" required>
+    <input type="text"  id="username" name="username" value="{{username}}"       maxlength="40" size="42" required>
     </h3>
 </section>
 <section>
     <h3> 
 <label for="email">email to make a cheer up account</label> 
-    <input type="text" name="email" value="{{email}}"  maxlength="40" size="42" required>
+    <input id="email" type="text" name="email" value="{{email}}"  maxlength="40" size="42" required>
     </h3>
 </section>
 <section>
     <h3> 
 <label for="password">password for cheer up site</label> 
-    <input type="password" name="password" value="{{password}}"    maxlength="25" size="26">
+    <input type="password" id="password" name="password" value="{{password}}"    maxlength="25" size="26">
     </h3>
 </section>
 <section>
