--- a/views/editCheer.hbs
+++ b/views/editCheer.hbs
@@ -9,19 +9,19 @@
     <section class="firstNC">
         <h3> 
     <label for="title">Cheer Up Title</label>
-    <input type="text" name="title" value="{{title}}" maxlength="40" size="42"  required>
+    <input type="text" id="title" name="title" value="{{title}}" maxlength="40" size="42"  required>
     </h3>
     </section>
     <section class="secondNC">
         <h3> 
     <label for="cheerup">Cheer Up Quip</label>
-    <input type="text" name="cheerup" value="{{cheerup}}"         maxlength="141" size="142" required >
+    <input type="text" id="cheerup" name="cheerup" value="{{cheerup}}"  maxlength="141" size="142" required >
     </h3>
     </section>
     <section class="thirdNC">
         <h3> 
     <label for="creator">Creator of this Cheer Up</label> 
-    <input type="text" name="creator" value="{{creator}}"  required>
+    <input type="text" id="creator" name="creator" value="{{creator}}"  required>
     </h3>
     </section>
     {{!-- 
