--- a/views/login.hbs
+++ b/views/login.hbs
@@ -10,13 +10,13 @@
     <section class="logtop"> 
         <h3>
     <label for="username">Cheer Ups User Name:</label>
-    <input type="text" name="username" value="{{username}}" maxlength="40" size="42" required>
+    <input type="text" id="username" name="username" value="{{username}}" maxlength="40" size="42" required>
     </h3>
     </section>
     <section class="logmid">
         <h3> 
     <label for= "password">Password for Cheer Ups: </label> 
-    <input type="password" name="password" value="{{password}}" maxlength="25" size="26">
+    <input type="password" id="password" name="password" value="{{password}}" maxlength="25" size="26">
     </h3>
     </section>
     <section class="logbtn">
