--- a/views/newAccount.hbs
+++ b/views/newAccount.hbs
@@ -21,13 +21,13 @@
 <section>
     <h3> 
 <label for="email">Email REQUIRED to make an account</label> 
-    <input type="text" name="email" value="{{email}}"       maxlength="40" size="42" required>
+    <input type="text" id="email" value="{{email}}"       maxlength="40" size="42" required>
     </h3>
 </section>
 <section>
     <h3> 
 <label for="password">Password for Cheer Ups</label> 
-    <input type="password" name="password" value="{{password}}" maxlength="25" size="26" required>
+    <input type="password" id="password" value="{{password}}" maxlength="25" size="26" required>
      </h3>
 </section>
 <section>
