--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -14,6 +14,12 @@
     <header>
         <h1> It's 🆗  Don't be sad 😞 Read a CheerUp and be Glad  🤗  !  🤩 </h1>
     </header>
+
+    <audio controls>
+<source src="/Audio/BrightSideofLife.mp3" type="audio/mpeg">
+Your browser does not support the audio element.
+</audio>
+
     <section >
         
          <div class ="top">
