all but one html errors fixed

--- a/views/newCheer.hbs
+++ b/views/newCheer.hbs
@@ -8,20 +8,20 @@
     <section class="firstNC">
         <h3>  
     <label for="title">Cheer Up Title</label>
-    <input type="text" name="title" value='{{title}}' maxlength="40" size="42" required>
+    <input type="text" id="title" name="title" value='{{title}}' maxlength="40" size="42" required>
     </h3>
     </section>
     <section class="secondNC">
         <h3>  
     <label for="cheerup">Cheer Up Quip</label>
-    <input type="text" name="cheerup" value='{{cheerup}}' maxlength="141" size="142" required>
+    <input type="text" id="title" name="cheerup" value='{{cheerup}}' maxlength="141" size="142" required>
     </h3>
     </section>
 
     <section class="thirdNC">
         <h3>  
     <label for="creator">Creator of this Cheer Up</label> 
-    <input creator="text" name="creator" value='{{creator}}' maxlength="40" size="42" required>
+    <input type="text" id="creator" name="creator" value='{{creator}}' maxlength="40" size="42" required>
     </h3>
     </section> 
     
