--- a/views/editUser.hbs
+++ b/views/editUser.hbs
@@ -9,13 +9,13 @@
 <section>
     <h3> 
 <label for="Name">Your Name</label>
-    <input type="text" name="name" value="{{name}}"  maxlength="40" size="42" required>
+    <input type="text" id="Name" name="name" value="{{name}}"  maxlength="40" size="42" required>
     </h3>
 </section>
 <section>
     <h3> 
 <label for="username">Cheer Ups User Name</label>
-    <input type="text"  id="username" name="username" value="{{username}}"       maxlength="40" size="42" required>
+    <input type="text"  id="username" name="username" value="{{username}}" maxlength="40" size="42" required>
     </h3>
 </section>
 <section>
