--- a/views/newCheer.hbs
+++ b/views/newCheer.hbs
@@ -14,7 +14,7 @@
     <section class="secondNC">
         <h3>  
     <label for="cheerup">Cheer Up Quip</label>
-    <input type="text" id="title" name="cheerup" value='{{cheerup}}' maxlength="141" size="142" required>
+    <input type="text" id="cheerup" name="cheerup" value='{{cheerup}}' maxlength="141" size="142" required>
     </h3>
     </section>
 
