--- a/views/showUser.hbs
+++ b/views/showUser.hbs
@@ -15,6 +15,6 @@
 
 
 
-<a id ="pop" class="button" href="/users/edit/{{this.id}}">Edit Your profile</a>
+<a  class="buttondetete" href="/users/edit/{{this.id}}">Edit Your profile</a>
 
 </div>
