--- a/views/newCheer.hbs
+++ b/views/newCheer.hbs
@@ -24,7 +24,7 @@
     <input type="text" id="creator" name="creator" value='{{creator}}' maxlength="40" size="42" required>
     </h3>
     </section> 
-    
+    {{!-- Would remove commented out code in production --}}
     {{!-- <section class="fourthNC">
         <h3>  
     <label for="backgroundColor"> Back Ground Color : </label>
